# ArmyofTwoRecomp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
ArmyofTwoRecomp/: CMakeLists.txt  framework.h  main.cpp  main.h  stdafx.cpp  stdafx.h  version.cpp  xxHashMap.h
ArmyofTwoRecomp/api/: SWA.h
ArmyofTwoRecomp/api/Hedgehog/Base/System/: hhAllocator.h  hhSymbol.inl
ArmyofTwoRecomp/api/boost/smart_ptr/: make_shared_object.h  shared_ptr.h
ArmyofTwoRecomp/cpu/: guest_thread.cpp  ppc_context.h
ArmyofTwoRecomp/gpu/: shader_common.h  video.cpp  video.h
ArmyofTwoRecomp/gpu/rhi/: plume_render_interface.h  plume_render_interface_builders.h  plume_render_interface_types.h
ArmyofTwoRecomp/hid/: hid.cpp
ArmyofTwoRecomp/hid/driver/: sdl_hid.cpp
ArmyofTwoRecomp/kernel/: heap.cpp  heap.h  imports.cpp  memory.h  xam.cpp  xdbf.h
ArmyofTwoRecomp/kernel/io/: file_system.cpp
ArmyofTwoRecomp/locale/: config_locale.cpp
ArmyofTwoRecomp/ui/: game_window.cpp  game_window.h
ArmyofTwoRecomp/user/: config.cpp  config.h  paths.h
ArmyofTwoRecompLib/: CMakeLists.txt
ArmyofTwoRecompLib/config/: config.toml
ArmyofTwoRecompLib/ppc/: .gitignore  ppc_config.h  ppc_context.h  ppc_func_mapping.cpp  ppc_recomp.0.cpp  ppc_recomp.1.cpp  ppc_recomp.10.cpp  ppc_recomp.100.cpp  ppc_recomp.101.cpp  ppc_recomp.102.cpp  ppc_recomp.103.cpp  ppc_recomp.104.cpp  ppc_recomp.105.cpp  ppc_recomp.106.cpp  ppc_recomp.107.cpp  ppc_recomp.108.cpp  ppc_recomp.109.cpp  ppc_recomp.11.cpp  ppc_recomp.110.cpp  ppc_recomp.111.cpp  ppc_recomp.112.cpp  ppc_recomp.113.cpp  ppc_recomp.114.cpp  ppc_recomp.115.cpp  ppc_recomp.116.cpp  ppc_recomp.117.cpp  ppc_recomp.118.cpp  ppc_recomp.119.cpp  ppc_recomp.12.cpp  ppc_recomp.120.cpp  ppc_recomp.121.cpp  ppc_recomp.122.cpp  ppc_recomp.123.cpp  ppc_recomp.124.cpp  ppc_recomp.125.cpp  ppc_recomp.126.cpp  ppc_recomp.127.cpp  ppc_recomp.128.cpp  ppc_recomp.129.cpp  ppc_recomp.13.cpp  (+212 more)
ArmyofTwoRecompLib/shader/: shader_cache.h
tools/: CMakeLists.txt
tools/XenonUtils/: CMakeLists.txt
